<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="total_de_quil_metros">Total de quilômetros</string>
    <string name="dist_ncia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="gasto_total">Seu gasto total será de</string>
    <string name="valor_total">R$ 0</string>
    <string name="calcular">Calcular</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="insira_valores_válidos">Insira valores válidos</string>
</resources>