<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="8dp"
    >

    <EditText
        android:id="@+id/editDistance"
    android:layout_width="match_parent"
    android:hint="@string/dist_ncia"
    android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quil_metros"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:hint="@string/preco"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:hint="@string/autonomia"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/gasto_total"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        />
    <TextView
        android:id="@+id/textTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:textColor="@color/darkBlue"
        android:inputType="numberDecimal"
        />
    <Button
        android:id="@+id/buttonCalculate"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="20sp"

        android:padding="20dp"
        android:background="@color/lightGreen"

        />

</LinearLayout>